# dinov2

./: requirements.txt  setup.cfg  setup.py
