[flake8]
max-line-length = 120
ignore = E203,E501,W503
per-file-ignores =
  __init__.py:F401
  hubconf.py:F401
exclude =
    venv

[metadata]
name = dinov2
version = 0.1.0
description = "PyTorch code and models for the DINOv2 self-supervised learning method."
long_description = file: README.md
long_description_content_type = text/markdown
author = "FAIR"
url = "https://github.com/facebookresearch/dinov2"
classifiers = 
    # Trove classifiers: https://github.com/pypa/trove-classifiers/blob/main/src/trove_classifiers/__init__.py
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",

[options]
packages = find:
python_requires = >=3.9.0
install_requires = 
  torch~=2.0.0
  torchvision>=0.15.0, <1.0.0
  torchmetrics>=0.10.3, <1.0.0
  omegaconf
  fvcore
  iopath
  xformers>=0.0.18
  submitit
  cuml-cu12

[options.extras_require]
dev = file: requirements-dev.txt
extras = file: requirements-extras.txt

